# auto_resume_portfolio

./: .gitignore  .replit  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  api.py  app.py  create_sample_pdf.py  database.py  portfolio_generator.py  pyproject.toml  requirements.txt  resume_processor.py  sample_resume.txt  start.sh  streamlitPriyansh.py  streamlit_app.py  streamlit_app_01.py  streamlit_requirements.txt  theme_templates.py
.streamlit/: config.toml  secrets.toml.example
attached_assets/: Pasted-Resume-information-extracted-successfully-Proceed-to-the-Customize-Theme-tab-to-continue-strea-1745252889169.txt  Pasted-Resume-information-extracted-successfully-Proceed-to-the-Customize-Theme-tab-to-continue-strea-1745253719607.txt  Pasted-import-streamlit-as-st-import-anthropic-import-pdfplumber-import-streamlit-components-v1-as-componen-1745250986252.txt
pages/: my_portfolios.py
