[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "pdfplumber>=0.11.6",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.2",
]
